:construction: Added notes on chromium issues with scrollbar

--- a/remaster/style.css
+++ b/remaster/style.css
@@ -17,8 +17,27 @@ html, body {
     height: 100%;
     margin: 0;
     padding: 0;
+
+    /* mozilla firefox styling of scrollbar */
     scrollbar-color: #004b77 #baf6ff;
 }
+
+/* chromium styling of scrollbar
+ * currently doesn't play nicely with .article overflow: scroll*/
+
+/* *::-webkit-scrollbar { */
+    /* width: 3px; */
+/* } */
+
+/* *::-webkit-scrollbar-track { */
+    /* background: #baf6ff; */
+/* } */
+
+/* *::-webkit-scrollbar-thumb { */
+    /* background-color: #004b77; */
+    /* border-radius: 20px; */
+    /* border: 3px solid #004b77; */
+/* } */
 
 /* circuit-board background image */
 .circuits {
